# package_upgrader_sudo

./: Cargo.toml  aiproject.yml
src/: main.rs  updater.rs
