[package]
name = "package_upgrader"
version = "0.1.0"
edition = "2021"
authors = ["Nitesh Debnath <30214255+veechiecooqu@users.noreply.github.com>"]
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tempfile = "3.5"
logind-dbus = "0.1.1"

[[bin]]
name = "upgr"
path = "src/main.rs"
