[package]
name = "package_upgrader_sudo"
version = "0.1.4"
edition = "2021"
authors = ["Nitesh Debnath <30214255+veechiecooqu@users.noreply.github.com>"]
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tempfile = "3.10"
logind-zbus = "4.0"
zbus = "4.3.0"

[[bin]]
name = "upgr"
path = "src/main.rs"
